[package]
name = "compacting"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compacting"
path = "src/compacting.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
scan_dir = "0.3.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.2.1", features = ["v4"] }
